// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeExtensible fails when given an extensible object: () => {} 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeExtensible()</intensity>

Expected value to not be extensible received:
  <green>[Function anonymous]</color>
"
`;

exports[`.not.toBeExtensible fails when given an extensible object: [] 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeExtensible()</intensity>

Expected value to not be extensible received:
  <green>[]</color>
"
`;

exports[`.not.toBeExtensible fails when given an extensible object: {} 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeExtensible()</intensity>

Expected value to not be extensible received:
  <green>{}</color>
"
`;

exports[`.toBeExtensible fails when not given an extensible object:  1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeExtensible()</intensity>

Expected value to be extensible received:
  <red>""</color>"
`;

exports[`.toBeExtensible fails when not given an extensible object: {} 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeExtensible()</intensity>

Expected value to be extensible received:
  <red>{}</color>"
`;

exports[`.toBeExtensible fails when not given an extensible object: {} 2`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeExtensible()</intensity>

Expected value to be extensible received:
  <red>{}</color>"
`;

exports[`.toBeExtensible fails when not given an extensible object: 0 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeExtensible()</intensity>

Expected value to be extensible received:
  <red>0</color>"
`;

exports[`.toBeExtensible fails when not given an extensible object: NaN 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeExtensible()</intensity>

Expected value to be extensible received:
  <red>NaN</color>"
`;

exports[`.toBeExtensible fails when not given an extensible object: false 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeExtensible()</intensity>

Expected value to be extensible received:
  <red>false</color>"
`;

exports[`.toBeExtensible fails when not given an extensible object: null 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeExtensible()</intensity>

Expected value to be extensible received:
  <red>null</color>"
`;

exports[`.toBeExtensible fails when not given an extensible object: undefined 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeExtensible()</intensity>

Expected value to be extensible received:
  <red>undefined</color>"
`;
